Update HmPrincipalController.java
2